Compiler_F74096019_HW2/y.output
Terminals unused in grammar

    TRUE
    FALSE


State 37 conflicts: 12 shift/reduce
State 45 conflicts: 12 shift/reduce
State 46 conflicts: 12 shift/reduce
State 47 conflicts: 12 shift/reduce
State 52 conflicts: 12 shift/reduce
State 64 conflicts: 12 shift/reduce
State 65 conflicts: 1 shift/reduce
State 81 conflicts: 12 shift/reduce
State 82 conflicts: 1 shift/reduce
State 99 conflicts: 12 shift/reduce
State 100 conflicts: 12 shift/reduce
State 104 conflicts: 12 shift/reduce
State 105 conflicts: 12 shift/reduce
State 114 conflicts: 12 shift/reduce
State 136 conflicts: 12 shift/reduce
State 138 conflicts: 12 shift/reduce
State 150 conflicts: 12 shift/reduce
State 167 conflicts: 13 shift/reduce
State 168 conflicts: 1 shift/reduce
State 169 conflicts: 12 shift/reduce
State 187 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: PackageStmt NEWLINE
    5                | FunctionDeclStmt
    6                | NEWLINE

    7 $@1: %empty

    8 PackageStmt: PACKAGE IDENT $@1

    9 $@2: %empty

   10 $@3: %empty

   11 $@4: %empty

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList ')' $@3 ReturnType $@4 FuncBlock

   13 FuncOpen: FUNC IDENT

   14 $@5: %empty

   15 ParameterList: IDENT ParamType $@5 ParameterList
   16              | ',' ParameterList
   17              | %empty

   18 ParamType: INT
   19          | FLOAT
   20          | STRING
   21          | BOOL

   22 ReturnType: INT
   23           | FLOAT
   24           | STRING
   25           | BOOL
   26           | %empty

   27 FuncBlock: '{' StatementList '}'

   28 ReturnStmt: RETURN HaveReturn

   29 HaveReturn: Expression
   30           | %empty

   31 Statement: DeclarationStmt NEWLINE
   32          | SimpleStmt NEWLINE
   33          | Block
   34          | IfStmt
   35          | ForStmt
   36          | SwitchStmt
   37          | CaseStmt
   38          | PrintStmt NEWLINE
   39          | ReturnStmt NEWLINE
   40          | NEWLINE
   41          | call_func NEWLINE

   42 call_func: IDENT '(' input_list ')'

   43 input_list: input input_list
   44           | ',' input_list
   45           | %empty

   46 input: IDENT
   47      | INT_LIT
   48      | FLOAT_LIT

   49 DeclarationStmt: VAR IDENT Type Assign_ornot

   50 Assign_ornot: '=' Expression
   51             | %empty

   52 SimpleStmt: AssignmentStmt
   53           | ExpressionStmt
   54           | IncDecStmt

   55 AssignmentStmt: Expression assign_op Expression

   56 assign_op: '='
   57          | ADD_ASSIGN
   58          | SUB_ASSIGN
   59          | MUL_ASSIGN
   60          | QUO_ASSIGN
   61          | REM_ASSIGN

   62 ExpressionStmt: Expression

   63 IncDecStmt: Expression INC_DEC

   64 INC_DEC: INC
   65        | DEC

   66 $@6: %empty

   67 Block: '{' $@6 StatementList '}'

   68 StatementList: Statement StatementList
   69              | %empty

   70 $@7: %empty

   71 IfStmt: IF Condition $@7 Block If_Else

   72 If_Else: ELSE If_Block
   73        | %empty

   74 If_Block: IfStmt
   75         | Block

   76 Condition: Expression

   77 $@8: %empty

   78 ForStmt: FOR Condition $@8 Block
   79        | FOR ForClause Block

   80 ForClause: InitStmt ';' Condition ';' PostStmt

   81 InitStmt: SimpleStmt

   82 PostStmt: SimpleStmt

   83 SwitchStmt: SWITCH Expression Block

   84 $@9: %empty

   85 CaseStmt: CASE INT_LIT $@9 ':' Block
   86         | DEFAULT ':' Block

   87 PrintStmt: PRINT '(' Expression ')'
   88          | PRINTLN '(' Expression ')'

   89 Type: INT
   90     | FLOAT
   91     | STRING
   92     | BOOL

   93 Expression: UnaryExpr
   94           | Expression binary_op Expression
   95           | '"' STRING_LIT '"'
   96           | call_func

   97 UnaryExpr: PrimaryExpr
   98          | unary_op UnaryExpr

   99 binary_op: LOR
  100          | LAND
  101          | cmp_op
  102          | add_op
  103          | mul_op

  104 cmp_op: EQL
  105       | NEQ
  106       | '<'
  107       | LEQ
  108       | '>'
  109       | GEQ

  110 add_op: '+'
  111       | '-'

  112 mul_op: '*'
  113       | '/'
  114       | '%'

  115 unary_op: '+'
  116         | '-'

  117 $@10: %empty

  118 unary_op: $@10 Dup_Not

  119 $@11: %empty

  120 Dup_Not: '!' $@11 Dup_Not
  121        | %empty

  122 PrimaryExpr: Operand
  123            | ConversionExpr

  124 Operand: Literal
  125        | IDENT

  126 $@12: %empty

  127 Operand: '(' $@12 Expression ')'

  128 Literal: INT_LIT
  129        | FLOAT_LIT
  130        | BOOL_LIT
  131        | STRING_LIT

  132 ConversionExpr: Type '(' Expression ')'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 120
    '"' (34) 95
    '%' (37) 114
    '(' (40) 12 42 87 88 127 132
    ')' (41) 12 42 87 88 127 132
    '*' (42) 112
    '+' (43) 110 115
    ',' (44) 16 44
    '-' (45) 111 116
    '/' (47) 113
    ':' (58) 85 86
    ';' (59) 80
    '<' (60) 106
    '=' (61) 50 56
    '>' (62) 108
    '{' (123) 27 67
    '}' (125) 27 67
    error (256)
    VAR (258) 49
    NEWLINE (259) 4 6 31 32 38 39 40 41
    INT (260) 18 22 89
    FLOAT (261) 19 23 90
    BOOL (262) 21 25 92
    STRING (263) 20 24 91
    TRUE (264)
    FALSE (265)
    INC (266) 64
    DEC (267) 65
    GEQ (268) 109
    LOR (269) 99
    LAND (270) 100
    LEQ (271) 107
    EQL (272) 104
    NEQ (273) 105
    ADD_ASSIGN (274) 57
    SUB_ASSIGN (275) 58
    MUL_ASSIGN (276) 59
    QUO_ASSIGN (277) 60
    REM_ASSIGN (278) 61
    IF (279) 71
    ELSE (280) 72
    FOR (281) 78 79
    SWITCH (282) 83
    CASE (283) 85
    DEFAULT (284) 86
    PRINT (285) 87
    PRINTLN (286) 88
    PACKAGE (287) 8
    FUNC (288) 13
    RETURN (289) 28
    INT_LIT <i_val> (290) 47 85 128
    FLOAT_LIT <f_val> (291) 48 129
    STRING_LIT <s_val> (292) 95 131
    BOOL_LIT <b_val> (293) 130
    IDENT <s_val> (294) 8 13 15 42 46 49 125


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    Program (58)
        on left: 1
        on right: 0
    GlobalStatementList (59)
        on left: 2 3
        on right: 1 2
    GlobalStatement (60)
        on left: 4 5 6
        on right: 2 3
    PackageStmt (61)
        on left: 8
        on right: 4
    $@1 (62)
        on left: 7
        on right: 8
    FunctionDeclStmt (63)
        on left: 12
        on right: 5
    $@2 (64)
        on left: 9
        on right: 12
    $@3 (65)
        on left: 10
        on right: 12
    $@4 (66)
        on left: 11
        on right: 12
    FuncOpen (67)
        on left: 13
        on right: 12
    ParameterList (68)
        on left: 15 16 17
        on right: 12 15 16
    $@5 (69)
        on left: 14
        on right: 15
    ParamType (70)
        on left: 18 19 20 21
        on right: 15
    ReturnType (71)
        on left: 22 23 24 25 26
        on right: 12
    FuncBlock (72)
        on left: 27
        on right: 12
    ReturnStmt (73)
        on left: 28
        on right: 39
    HaveReturn (74)
        on left: 29 30
        on right: 28
    Statement (75)
        on left: 31 32 33 34 35 36 37 38 39 40 41
        on right: 68
    call_func (76)
        on left: 42
        on right: 41 96
    input_list (77)
        on left: 43 44 45
        on right: 42 43 44
    input (78)
        on left: 46 47 48
        on right: 43
    DeclarationStmt (79)
        on left: 49
        on right: 31
    Assign_ornot (80)
        on left: 50 51
        on right: 49
    SimpleStmt (81)
        on left: 52 53 54
        on right: 32 81 82
    AssignmentStmt (82)
        on left: 55
        on right: 52
    assign_op (83)
        on left: 56 57 58 59 60 61
        on right: 55
    ExpressionStmt (84)
        on left: 62
        on right: 53
    IncDecStmt (85)
        on left: 63
        on right: 54
    INC_DEC (86)
        on left: 64 65
        on right: 63
    Block (87)
        on left: 67
        on right: 33 71 75 78 79 83 85 86
    $@6 (88)
        on left: 66
        on right: 67
    StatementList (89)
        on left: 68 69
        on right: 27 67 68
    IfStmt (90)
        on left: 71
        on right: 34 74
    $@7 (91)
        on left: 70
        on right: 71
    If_Else (92)
        on left: 72 73
        on right: 71
    If_Block (93)
        on left: 74 75
        on right: 72
    Condition (94)
        on left: 76
        on right: 71 78 80
    ForStmt (95)
        on left: 78 79
        on right: 35
    $@8 (96)
        on left: 77
        on right: 78
    ForClause (97)
        on left: 80
        on right: 79
    InitStmt (98)
        on left: 81
        on right: 80
    PostStmt (99)
        on left: 82
        on right: 80
    SwitchStmt (100)
        on left: 83
        on right: 36
    CaseStmt (101)
        on left: 85 86
        on right: 37
    $@9 (102)
        on left: 84
        on right: 85
    PrintStmt (103)
        on left: 87 88
        on right: 38
    Type (104)
        on left: 89 90 91 92
        on right: 49 132
    Expression (105)
        on left: 93 94 95 96
        on right: 29 50 55 62 63 76 83 87 88 94 127 132
    UnaryExpr (106)
        on left: 97 98
        on right: 93 98
    binary_op (107)
        on left: 99 100 101 102 103
        on right: 94
    cmp_op (108)
        on left: 104 105 106 107 108 109
        on right: 101
    add_op (109)
        on left: 110 111
        on right: 102
    mul_op (110)
        on left: 112 113 114
        on right: 103
    unary_op (111)
        on left: 115 116 118
        on right: 98
    $@10 (112)
        on left: 117
        on right: 118
    Dup_Not (113)
        on left: 120 121
        on right: 118 120
    $@11 (114)
        on left: 119
        on right: 120
    PrimaryExpr (115)
        on left: 122 123
        on right: 97
    Operand (116)
        on left: 124 125 127
        on right: 122
    $@12 (117)
        on left: 126
        on right: 127
    Literal (118)
        on left: 128 129 130 131
        on right: 124
    ConversionExpr (119)
        on left: 132
        on right: 123


State 0

    0 $accept: . Program $end

    NEWLINE  shift, and go to state 1
    PACKAGE  shift, and go to state 2
    FUNC     shift, and go to state 3

    Program              go to state 4
    GlobalStatementList  go to state 5
    GlobalStatement      go to state 6
    PackageStmt          go to state 7
    FunctionDeclStmt     go to state 8
    FuncOpen             go to state 9


State 1

    6 GlobalStatement: NEWLINE .

    $default  reduce using rule 6 (GlobalStatement)


State 2

    8 PackageStmt: PACKAGE . IDENT $@1

    IDENT  shift, and go to state 10


State 3

   13 FuncOpen: FUNC . IDENT

    IDENT  shift, and go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 1
    PACKAGE  shift, and go to state 2
    FUNC     shift, and go to state 3

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 13
    PackageStmt       go to state 7
    FunctionDeclStmt  go to state 8
    FuncOpen          go to state 9


State 6

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 7

    4 GlobalStatement: PackageStmt . NEWLINE

    NEWLINE  shift, and go to state 14


State 8

    5 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 5 (GlobalStatement)


State 9

   12 FunctionDeclStmt: FuncOpen . $@2 '(' ParameterList ')' $@3 ReturnType $@4 FuncBlock

    $default  reduce using rule 9 ($@2)

    $@2  go to state 15


State 10

    8 PackageStmt: PACKAGE IDENT . $@1

    $default  reduce using rule 7 ($@1)

    $@1  go to state 16


State 11

   13 FuncOpen: FUNC IDENT .

    $default  reduce using rule 13 (FuncOpen)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


State 14

    4 GlobalStatement: PackageStmt NEWLINE .

    $default  reduce using rule 4 (GlobalStatement)


State 15

   12 FunctionDeclStmt: FuncOpen $@2 . '(' ParameterList ')' $@3 ReturnType $@4 FuncBlock

    '('  shift, and go to state 17


State 16

    8 PackageStmt: PACKAGE IDENT $@1 .

    $default  reduce using rule 8 (PackageStmt)


State 17

   12 FunctionDeclStmt: FuncOpen $@2 '(' . ParameterList ')' $@3 ReturnType $@4 FuncBlock

    IDENT  shift, and go to state 18
    ','    shift, and go to state 19

    $default  reduce using rule 17 (ParameterList)

    ParameterList  go to state 20


State 18

   15 ParameterList: IDENT . ParamType $@5 ParameterList

    INT     shift, and go to state 21
    FLOAT   shift, and go to state 22
    BOOL    shift, and go to state 23
    STRING  shift, and go to state 24

    ParamType  go to state 25


State 19

   16 ParameterList: ',' . ParameterList

    IDENT  shift, and go to state 18
    ','    shift, and go to state 19

    $default  reduce using rule 17 (ParameterList)

    ParameterList  go to state 26


State 20

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList . ')' $@3 ReturnType $@4 FuncBlock

    ')'  shift, and go to state 27


State 21

   18 ParamType: INT .

    $default  reduce using rule 18 (ParamType)


State 22

   19 ParamType: FLOAT .

    $default  reduce using rule 19 (ParamType)


State 23

   21 ParamType: BOOL .

    $default  reduce using rule 21 (ParamType)


State 24

   20 ParamType: STRING .

    $default  reduce using rule 20 (ParamType)


State 25

   15 ParameterList: IDENT ParamType . $@5 ParameterList

    $default  reduce using rule 14 ($@5)

    $@5  go to state 28


State 26

   16 ParameterList: ',' ParameterList .

    $default  reduce using rule 16 (ParameterList)


State 27

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList ')' . $@3 ReturnType $@4 FuncBlock

    $default  reduce using rule 10 ($@3)

    $@3  go to state 29


State 28

   15 ParameterList: IDENT ParamType $@5 . ParameterList

    IDENT  shift, and go to state 18
    ','    shift, and go to state 19

    $default  reduce using rule 17 (ParameterList)

    ParameterList  go to state 30


State 29

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList ')' $@3 . ReturnType $@4 FuncBlock

    INT     shift, and go to state 31
    FLOAT   shift, and go to state 32
    BOOL    shift, and go to state 33
    STRING  shift, and go to state 34

    $default  reduce using rule 26 (ReturnType)

    ReturnType  go to state 35


State 30

   15 ParameterList: IDENT ParamType $@5 ParameterList .

    $default  reduce using rule 15 (ParameterList)


State 31

   22 ReturnType: INT .

    $default  reduce using rule 22 (ReturnType)


State 32

   23 ReturnType: FLOAT .

    $default  reduce using rule 23 (ReturnType)


State 33

   25 ReturnType: BOOL .

    $default  reduce using rule 25 (ReturnType)


State 34

   24 ReturnType: STRING .

    $default  reduce using rule 24 (ReturnType)


State 35

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList ')' $@3 ReturnType . $@4 FuncBlock

    $default  reduce using rule 11 ($@4)

    $@4  go to state 36


State 36

   12 FunctionDeclStmt: FuncOpen $@2 '(' ParameterList ')' $@3 ReturnType $@4 . FuncBlock

    '{'  shift, and go to state 37

    FuncBlock  go to state 38


State 37

   27 FuncBlock: '{' . StatementList '}'
